# Nebula

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
nebula-cli/: Cargo.toml
nebula-cli/src/: main.rs
nebula-core/: Cargo.toml
nebula-core/src/: config.rs  error.rs  event.rs  lib.rs  manager.rs  task.rs  trackers.rs
nebula-core/src/protocol/: bilibili.rs  http.rs  mod.rs  torrent.rs  video.rs
nebula_app/: README.md  pubspec.yaml
nebula_app/android/app/: build.gradle.kts
nebula_app/android/app/src/main/: AndroidManifest.xml
nebula_app/android/app/src/main/kotlin/com/nebula/nebula_app/: MainActivity.kt
nebula_app/integration_test/: simple_test.dart
nebula_app/ios/Runner/: Info.plist
nebula_app/ios/Runner.xcodeproj/: project.pbxproj
nebula_app/lib/: main.dart  settings.dart  theme.dart
nebula_app/lib/models/: settings.dart
nebula_app/lib/pages/: accounts_page.dart  completed_page.dart  downloads_page.dart  home_page.dart  main_shell.dart  settings_page.dart
nebula_app/lib/providers/: download_provider.dart  settings_provider.dart
nebula_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
nebula_app/lib/src/rust/api/: download.dart  download.freezed.dart
nebula_app/lib/widgets/: drop_zone.dart  progress_bar.dart  task_card.dart  video_info_dialog.dart
nebula_app/linux/: CMakeLists.txt
nebula_app/linux/flutter/: generated_plugins.cmake
nebula_app/linux/runner/: my_application.cc
nebula_app/macos/Runner/: DebugProfile.entitlements  Release.entitlements
nebula_app/macos/Runner.xcodeproj/: project.pbxproj
nebula_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
nebula_app/macos/Runner/Configs/: AppInfo.xcconfig
nebula_app/rust/: Cargo.toml
nebula_app/rust/src/: frb_generated.rs
nebula_app/rust/src/api/: download.rs  mod.rs
nebula_app/rust_builder/android/: build.gradle  settings.gradle
nebula_app/rust_builder/android/src/main/: AndroidManifest.xml
nebula_app/rust_builder/ios/: rust_lib_nebula.podspec
nebula_app/rust_builder/linux/: CMakeLists.txt
nebula_app/rust_builder/macos/: rust_lib_nebula.podspec
nebula_app/rust_builder/windows/: CMakeLists.txt
nebula_app/web/: index.html  manifest.json
nebula_app/windows/: CMakeLists.txt
nebula_app/windows/flutter/: generated_plugins.cmake
nebula_app/windows/runner/: Runner.rc  main.cpp
