[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nebula CLI - 命令行下载工具"

[[bin]]
name = "nebula"
path = "src/main.rs"

[dependencies]
# 核心库
nebula-core = { path = "../nebula-core" }

# 异步运行时
tokio.workspace = true

# 命令行解析
clap.workspace = true

# 进度条
indicatif.workspace = true
console.workspace = true

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

# 错误处理
anyhow.workspace = true

# 信号处理
ctrlc = "3.4"
