[package]
name = "rust_lib_nebula"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Nebula 核心下载库
nebula-core = { path = "../../nebula-core" }

# 异步运行时
tokio = { version = "1.41", features = ["full"] }

# 日志
tracing = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

